--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <title>article beautifer</title>
 </head>
 <body>
-  <div>
+  <div id="parsed">
     hello world
   </div>
 
   <script type="text/javascript" src="jquery.js"></script>
-  <script src="config.js" type="text/javascript"></script>
-  <script src="index.js" type="text/javascript"></script>
+  <script type="text/javascript" src="index.js" ></script>
 </body>
 </html>
