Moves API calls to the load.js; removes reliance on localStorage

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title>article beautifer</title>
 </head>
 <body>
-  <div id="parsed">
-    hello world
+  <div id="beautified">
   </div>
 
   <script type="text/javascript" src="jquery.js"></script>
