Finish styling facebook

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <html>
 <head>
   <title>article beautifer</title>
+  <link rel="stylesheet" type="text/css" href="mainstyles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  <div class="button-container">
+    <button class="medium-styles">Medium</button>
+    <button class="fb-styles">Facebook</button>
+  </div>
   <div id="parsed">
     hello world
   </div>
