Add grantland styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div class="button-container">
     <button class="medium-styles">Medium</button>
     <button class="fb-styles">Facebook</button>
+    <button class="grantland-styles">Grantland</button>
   </div>
   <div id="beautified">
     
